--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="colorPrimaryDark">#0288D1</color>
     <color name="colorAccent">#FF4081</color>
     <color name="grey">#cccccc</color>
+    <color name="white">#FFFFFF</color>
+    <color name="grey_700">#646464</color>
+    <color name="black">#000000</color>
 
 
 </resources>
